<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/btn_profile_management"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="46dp"
        android:onClick="btn_profile_management_onClick"
        android:text="@string/profile_management" />

    <Button
        android:id="@+id/btn_biology"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_profile_management"
        android:layout_centerHorizontal="true"
        android:onClick="btn_biology_onClick"
        android:text="@string/biology_graph" />

    <Button
        android:id="@+id/btn_horoscope"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_business"
        android:layout_centerHorizontal="true"
        android:onClick="btn_horoscope_onClick"
        android:text="@string/horoscope" />

    <ImageButton
        android:id="@+id/btn_lover"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_biology"
        android:layout_alignLeft="@+id/btn_business"
        android:background="@drawable/btn_xemtuoiketduyen"
        android:onClick="btn_lover_onClick"
        android:text="@string/lover" />

    <ImageButton
        android:id="@+id/btn_business"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btn_lover"
        android:layout_alignLeft="@+id/btn_horoscope"
        android:layout_marginBottom="32dp"
        android:background="@drawable/btn_theotuoilaman"
        android:onClick="btn_business_onClick"
        android:text="@string/partner" />

</RelativeLayout>